--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -136,7 +136,9 @@ hr {
 footer {
   width:270px;
   float:left;
-  bottom:50px;
+  margin-top: 500px;
+  position: relative;
+  clear: both;
 }
 
 @media print, screen and (max-width: 960px) {
