--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,119 +1,70 @@
 body {
-  margin: 10px;
-  padding:50px;
+  padding: 20px;
   font:14px/1.5 'Ropa Sans', "Helvetica Neue", Helvetica, sans-serif;
-  color:#777;
+  color:gray;
   font-weight:300;
 }
 
 h1, h2, h3, h4, h5, h6 {
   color:#222;
-  margin:0 0 20px;
-}
-
-p, ul, ol, table, pre, dl {
-  margin:0 0 20px;
 }
 
 h1, h2, h3 {
-  line-height:1.1;
+  line-height:1.25;
 }
 
 h1 {
-  font-size:28px;
+  font-size:20px;
 }
 
-h2 {
-  color:#393939;
-}
-
-h3, h4, h5, h6 {
-  color:#494949;
+p {
+  margin:0 0 20px;
+  color: #b3b3b3;
 }
 
 a {
-  color:#39c;
+  color:#666;
   font-weight:400;
   text-decoration:none;
 }
 
 a small {
   font-size:11px;
-  color:#777;
-  margin-top:-0.6em;
+  color:gray;
   display:block;
+}
+
+a.nav:hover {
+  background-color: aqua;
+}
+
+.logo {
+  width: 130px;
+  margin-left: 5px;
+}
+
+.resume {
+  background-color: greenyellow;
+}
+
+.main-img {
+  margin-top: 50px;
+  margin-bottom: 25px;
 }
 
 .wrapper {
   width:860px;
   margin:0 auto;
 }
+
 img {
   max-width:100%;
 }
 
 header {
-  width:270px;
+  width:200px;
   float:left;
   position:fixed;
-}
-
-header ul {
-  list-style:none;
-  height:40px;
-
-  padding:0;
-
-  background: #eee;
-  background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-  background: -webkit-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -o-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -ms-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-
-  border-radius:5px;
-  border:1px solid #d2d2d2;
-  box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
-  width:270px;
-}
-
-header li {
-  width:89px;
-  float:left;
-  border-right:1px solid #d2d2d2;
-  height:40px;
-}
-
-header ul a {
-  line-height:1;
-  font-size:11px;
-  color:#999;
-  display:block;
-  text-align:center;
-  padding-top:6px;
-  height:40px;
-}
-
-strong {
-  color:#222;
-  font-weight:700;
-}
-
-header ul li + li {
-  width:88px;
-  border-left:1px solid #fff;
-}
-
-header ul li + li + li {
-  border-right:none;
-  width:89px;
-}
-
-header ul a strong {
-  font-size:14px;
-  display:block;
-  color:#222;
 }
 
 section {
@@ -122,21 +73,16 @@ section {
   padding-bottom:50px;
 }
 
-small {
-  font-size:11px;
-}
-
 hr {
   border:0;
-  background:#e5e5e5;
+  background:lightgray;
   height:1px;
-  margin:0 0 20px;
 }
 
 footer {
-  width:270px;
+  width:200px;
   float:left;
-  margin-top: 500px;
+  margin-top: 300px;
   position: relative;
   clear: both;
 }
@@ -186,3 +132,4 @@ footer {
   display: block;
   }
 }
+
