--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -25,9 +25,17 @@ footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
-q:before, q:after {
-  content: '';
-  content: none;
+html,
+button,
+input,
+select,
+textarea {
+    color: #222;
+}
+
+html {
+    font-size: 1em;
+    line-height: 1.4;
 }
 
 body {
@@ -36,6 +44,42 @@ body {
   font: 1em/1.5 'Ropa Sans', "Helvetica Neue", Helvetica, sans-serif;
   color: gray;
   font-weight: 300;
+}
+
+::-moz-selection {
+    background: #b3d4fc;
+    text-shadow: none;
+}
+
+::selection {
+    background: #b3d4fc;
+    text-shadow: none;
+}
+
+.browsehappy {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
+}
+
+.ie7 .title {
+    padding-top: 20px;
+}
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: .5px solid #ccc;
+    background: #b3b3b3;
+    margin: 1em 0;
+    padding: 0;
+}
+
+q:before, q:after {
+  content: '';
+  content: none;
 }
 
 header {
@@ -47,13 +91,7 @@ section {
   width: 800px;
   margin-left: 200px;
   padding-bottom: 50px;
-  padding-top: 50px;
-}
-
-hr {
-  border: 0;
-  background: #b3b3b3;
-  height: 1px;
+  padding-top: 40px;
 }
 
 footer {
@@ -88,6 +126,10 @@ p {
   color: gray;
 }
 
+.nav-ul li {
+  list-style: none;
+}
+
 img {
   width: 100%
 }
@@ -119,8 +161,8 @@ a.nav:hover {
 }
 
 .wrapper {
-  width: 1000px;
-  margin: 0 auto;
+  width: 90%;
+  margin: 0 5%;
 }
 
 .name {
@@ -447,21 +489,96 @@ a.resume:hover {
   filter: alpha(opacity=80);
 }
 
-@media only screen and (min-width : 481px) and (max-width : 768px) {
+/* MOBILE: Menu  */
 
-  header {
-    margin-left: 5px;
-  }
-
-  .grid {
-      width: 500px;
-  }
-
-  .large {
-    width: 400px;
-  }
-
+nav ul {
+  margin: 0;
+  padding: 0;
 }
+
+nav a {
+  display: block;
+  margin-bottom: 10px;
+  padding: 15px 0;
+
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+
+  color: white;
+  background: #e44d26;
+}
+
+nav a:hover,
+nav a:visited {
+  color: white;
+}
+
+nav a:hover {
+  text-decoration: underline;
+}
+
+/* Helper classes */
+
+.ir {
+  background-color: transparent;
+  border: 0;
+  overflow: hidden;
+  *text-indent: -9999px;
+}
+
+.ir:before {
+  content: "";
+  display: block;
+  width: 0;
+  height: 150%;
+}
+
+.hidden {
+  display: none !important;
+  visibility: hidden;
+}
+
+.visuallyhidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+.visuallyhidden.focusable:active,
+.visuallyhidden.focusable:focus {
+  clip: auto;
+  height: auto;
+  margin: 0;
+  overflow: visible;
+  position: static;
+  width: auto;
+}
+
+.invisible {
+  visibility: hidden;
+}
+
+.clearfix:before,
+.clearfix:after {
+  content: " ";
+  display: table;
+}
+
+.clearfix:after {
+  clear: both;
+}
+
+.clearfix {
+  *zoom: 1;
+}
+
+/* Media Queries */
 
 @media only screen and (min-width : 320px) and (max-width : 480px) {
 
@@ -477,4 +594,92 @@ a.resume:hover {
     width: 200px;
   }
 
+}
+
+@media only screen and (min-width : 481px) and (max-width : 768px) {
+
+  header {
+    margin-left: 5px;
+  }
+
+  .grid {
+    width: 500px;
+  }
+
+  .large {
+    width: 400px;
+  }
+
+}
+
+@media only screen and (min-width: 1140px) {
+  .wrapper {
+    width: 1026px; /* 1140px - 10% for margins */
+    margin: 0 auto;
+  }
+}
+
+/* Print styles */
+
+@media print {
+  * {
+    background: transparent !important;
+    color: #000 !important;
+    box-shadow: none !important;
+    text-shadow: none !important;
+  }
+
+  a,
+  a:visited {
+    text-decoration: underline;
+  }
+
+  a[href]:after {
+    content: " (" attr(href) ")";
+  }
+
+  abbr[title]:after {
+    content: " (" attr(title) ")";
+  }
+
+  .ir a:after,
+  a[href^="javascript:"]:after,
+  a[href^="#"]:after {
+    content: "";
+  }
+
+  pre,
+  blockquote {
+    border: 1px solid #999;
+    page-break-inside: avoid;
+  }
+
+  thead {
+    display: table-header-group;
+  }
+
+  tr,
+  img {
+    page-break-inside: avoid;
+  }
+
+  img {
+    max-width: 100% !important;
+  }
+
+  @page {
+    margin: 0.5cm;
+  }
+
+  p,
+  h2,
+  h3 {
+    orphans: 3;
+    widows: 3;
+  }
+
+  h2,
+  h3 {
+    page-break-after: avoid;
+  }
 }
