--- a/gtrainlovestory/css/styles.css
+++ b/gtrainlovestory/css/styles.css
@@ -1,6 +1,15 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
 @import url(http://fonts.googleapis.com/css?family=Merriweather:400,300,400italic,300italic,700,700italic);
 @import url(http://fonts.googleapis.com/css?family=Nunito:400,300,700);
+
+/* ==========================================================================
+Added
+========================================================================== */
+
+.tighten {
+    line-height: 22px;
+}
+
 /* ==========================================================================
 Typography
 ========================================================================== */
@@ -31,6 +40,12 @@ h5 {
   color: #3D4351;
   text-transform: uppercase;
   font-weight: 500; }
+
+h6 {
+  font-size: 15px;
+  color: #3D4351;
+  font-weight: 500;
+  line-height: 24px; }
 
 .btn {
   font-size: 13px;
