--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -583,7 +583,11 @@ nav a:hover {
 
 /* Media Queries */
 
-@media only screen and (min-width : 320px) and (max-width : 480px) {
+@media only screen and (max-width : 480px) {
+
+  #intro, footer {
+    display: none;
+  }
 
   header {
     margin-left: 5px;
