--- a/gtrainlovestory/css/styles.css
+++ b/gtrainlovestory/css/styles.css
@@ -10,6 +10,69 @@ Added
     line-height: 22px;
 }
 
+.gallery {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 22px 0 0 0;
+}
+
+.gallery ul {
+    -moz-column-count: 3;
+    -moz-column-gap: 2%;
+    -webkit-column-count: 3;
+    -webkit-column-gap: 2%;
+    column-count: 3;
+    column-gap: 2%;
+    margin: 0 auto;
+    padding: 0;
+    max-width: 1000px;
+}
+
+.gallery ul li {
+  display: inline-block;
+  list-style: none;            
+  margin-bottom: 20px;
+  padding: 0;
+  width: 100%;
+}
+
+.gallery ul li img {
+  width: 400px;
+  height: 100%;
+  padding: 10px 20px;
+  margin-bottom: 10px;
+  display: block;
+}
+       
+@media only screen and (min-width: 768px) and (max-width: 999px) {
+
+  .gallery ul {
+    -moz-column-count: 2;
+    -moz-column-gap: 2%;
+    -webkit-column-count: 2;
+    -webkit-column-gap: 2%;
+    column-count: 2;
+    column-gap: 2%;
+    padding: 0 2%;
+  }
+
+}
+
+@media only screen and (max-width: 767px) {
+  
+  .gallery ul {
+    -moz-column-count: 1;
+    -moz-column-gap: 2%;
+    -webkit-column-count: 1;
+    -webkit-column-gap: 2%;
+    column-count: 1;
+    column-gap: 2%;
+    padding: 0 2%;
+  }
+  
+}
+
 /* ==========================================================================
 Typography
 ========================================================================== */
