update gtrain main content

--- a/gtrainlovestory/css/styles.css
+++ b/gtrainlovestory/css/styles.css
@@ -6,6 +6,10 @@
 Added
 ========================================================================== */
 
+.primary-pics {
+    width: 100%;
+}
+
 .tighten {
     line-height: 22px;
 }
