--- a/gtrainlovestory/css/queries.css
+++ b/gtrainlovestory/css/queries.css
@@ -292,7 +292,7 @@
 		.features .ipad-wrap {
 			width: 706px;
 			height: 1002px;
-			background: url("../img/ipad-device.png") no-repeat center center;
+			background: url("../img/dickinson.png") no-repeat center center;
 			z-index: 1;
 			background-size: 40%;
 		}
@@ -300,7 +300,7 @@
 		.features .iphone-wrap {
 			width: 304px;
 			height: 617px;
-			background: url("../img/iphone6.png") no-repeat center center;
+			background: url("../img/eliot.png") no-repeat center center;
 			position: absolute;
 			left: 350px;
 			bottom: 129px;
