--- a/gtrainlovestory/css/styles.css
+++ b/gtrainlovestory/css/styles.css
@@ -6,6 +6,29 @@
 Added
 ========================================================================== */
 
+.zoomy1 img {
+    width: 100%;
+    height: auto;
+    -webkit-transition: all 300ms ease-in-out;
+    transition: all 300ms ease-in-out; }
+.zoomy1 .zoomy2 {
+    position: relative;
+    overflow: hidden; }
+.zoomy1 .zoomy2:hover img, .blog .zoomy2:focus img {
+    -ms-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1); }
+
+.linker:hover {
+  background-color: #E8E9EE;
+  -webkit-transition-timing-function: ease;
+  transition-timing-function: ease;
+  -webkit-transition-duration: 500ms;
+  transition-duration: 500ms;
+  -webkit-transition-property: background-color;
+  transition-property: background-color;
+}
+
 .primary-pics {
     width: 100%;
 }
@@ -574,12 +597,12 @@ Features-stack
   .features .ipad-wrap {
     width: 706px;
     height: 1002px;
-    background: url("../img/ipad-device.png") no-repeat center center;
+    background: url("../img/dickinson.png") no-repeat center center;
     z-index: 1; }
   .features .iphone-wrap {
     width: 304px;
     height: 620px;
-    background: url("../img/iphone6.png") no-repeat center center;
+    background: url("../img/eliot.png") no-repeat center center;
     position: absolute;
     left: 530px;
     bottom: 129px;
@@ -607,7 +630,7 @@ Features-stack
     position: absolute;
     width: 916px;
     height: 540px;
-    background: url("../img/macbook-pro.png") no-repeat center center;
+    background: url("../img/theater.png") no-repeat center center;
     top: 114px;
     z-index: 4;
     left: 50%; }
@@ -866,7 +889,7 @@ footer {
     position: absolute;
     background-color: #373D4A;
     right: 0;
-    width: 40%;
+    width: 20%;
     height: 100%;
     padding: 142px 0 0 70px; }
     footer .social-share p {
@@ -874,11 +897,11 @@ footer {
       text-transform: uppercase;
       padding-bottom: 10px; }
     footer .social-share a.twitter-share {
-      height: 60px;
-      width: 60px;
+      height: 40px;
+      width: 40px;
       background-color: #1AB4EF;
-      border-radius: 3px;
-      font-size: 22px;
+      border-radius: 20px;
+      font-size: 20px;
       display: inline-block;
       text-align: center;
       margin-right: 20px; }
@@ -887,11 +910,11 @@ footer {
     footer .social-share a.facebook-share:hover, footer .social-share a.facebook-share:focus {
       background-color: #324C85; }
     footer .social-share a.facebook-share {
-      height: 60px;
-      width: 60px;
+      height: 40px;
+      width: 40px;
       background-color: #3B5898;
-      border-radius: 3px;
-      font-size: 22px;
+      border-radius: 20px;
+      font-size: 20px;
       display: inline-block;
       text-align: center; }
     footer .social-share a {
@@ -899,7 +922,7 @@ footer {
     footer .social-share a:hover {
       color: #fff; }
     footer .social-share a i {
-      margin-top: 20px; }
+      margin-top: 10px; }
   footer .footer-links {
     margin: 120px 0 120px 0; }
 
