--- a/gtrainlovestory/sass/styles.scss
+++ b/gtrainlovestory/sass/styles.scss
@@ -425,13 +425,13 @@ Features-stack
   .ipad-wrap {
     width: 706px;
     height: 1002px;
-    background: url("../img/ipad-device.png") no-repeat center center;
+    background: url("../img/dickinson.png") no-repeat center center;
     z-index: 1;
   }
   .iphone-wrap {
     width: 304px;
     height: 620px;
-    background: url("../img/iphone6.png") no-repeat center center;
+    background: url("../img/eliot.png") no-repeat center center;
     position: absolute;
     left: 530px;
     bottom: 129px;
@@ -464,7 +464,7 @@ Features-stack
     position: absolute;
     width: 916px;
     height: 540px;
-    background: url("../img/macbook-pro.png") no-repeat center center;
+    background: url("../img/theater.png") no-repeat center center;
     top: 114px;
     z-index: 4;
     left: 50%;
