--- a/gtrainlovestory/css/styles.css
+++ b/gtrainlovestory/css/styles.css
@@ -1,10 +1,69 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
 @import url(http://fonts.googleapis.com/css?family=Merriweather:400,300,400italic,300italic,700,700italic);
 @import url(http://fonts.googleapis.com/css?family=Nunito:400,300,700);
+@import url(http://fonts.googleapis.com/css?family=Amatic+SC:400,700);
 
 /* ==========================================================================
 Added
 ========================================================================== */
+
+.header-logo {
+  color: white;
+}
+
+.footer-group li a {
+  font-size: 10px;
+}
+
+.light-box {
+  -webkit-transition-timing-function: ease;
+  transition-timing-function: ease;
+  -webkit-transition-duration: 500ms;
+  transition-duration: 500ms;
+  -webkit-transition-property: background-color;
+  transition-property: background-color;
+  -webkit-box-shadow: 0px 3px 0px 0px #f0f2f4;
+  -moz-box-shadow: 0px 3px 0px 0px #f0f2f4;
+  box-shadow: 0px 3px 0px 0px #f0f2f4;
+  padding: 20px 0;
+}
+
+.light-box:hover, .light-box:focus { 
+  background-color: #E8E9EE;
+  -webkit-box-shadow: 0px 3px 0px 0px #3dc9b3;
+  -moz-box-shadow: 0px 3px 0px 0px #3dc9b3;
+  box-shadow: 0px 3px 0px 0px #3dc9b3;
+}
+
+.box-hover {
+  transition: all 500ms ease-in-out;
+  -webkit-transition: all 500ms ease-in-out;
+  -moz-transition: all 500ms ease-in-out;
+  -o-transition: all 500ms ease-in-out;
+}
+
+.box-hover:hover, .box-hover:focus {
+  transform: translate(0, -15px);
+  -webkit-transform: translate(0, -15px);
+  -ms-transform: translate(0, -15px);
+}
+
+.hand {
+  font-family: 'Amatic SC';
+  font-weight: 700;
+  letter-spacing: 0.2em;
+}
+
+h1, h2, h3 {
+  font-family: 'Amatic SC';
+  font-weight: 700;
+  letter-spacing: 0.2em; 
+}
+
+.map {
+  width: 40%;
+  height: auto;
+}
 
 .zoomy1 img {
     width: 100%;
@@ -18,16 +77,6 @@ Added
     -ms-transform: scale(1.1);
     -webkit-transform: scale(1.1);
     transform: scale(1.1); }
-
-.linker:hover {
-  background-color: #E8E9EE;
-  -webkit-transition-timing-function: ease;
-  transition-timing-function: ease;
-  -webkit-transition-duration: 500ms;
-  transition-duration: 500ms;
-  -webkit-transition-property: background-color;
-  transition-property: background-color;
-}
 
 .primary-pics {
     width: 100%;
@@ -104,89 +153,105 @@ Added
 Typography
 ========================================================================== */
 p {
-  font-size: 15px;
-  line-height: 29px;
+  font-size: 1em;
   color: rgba(28, 54, 83, 0.6);
-  padding-bottom: 20px; }
+  padding-bottom: 20px;
+}
 
 h1 {
-  font-size: 60px; }
+  font-size: 6em;
+}
 
 h2 {
-  font-size: 40px;
-  font-weight: 300;
-  color: #3D4351; }
+  font-size: 4em;
+  color: #3D4351;
+}
 
 h3 {
-  font-size: 24px;
+  font-size: 3em;
   margin-bottom: 20px;
-  color: #3D4351; }
+  color: #3D4351;
+}
 
 h4 {
-  font-size: 18px; }
+  font-size: 2em;
+}
 
 h5 {
-  font-size: 15px;
+  font-size: 1em;
   color: #3D4351;
   text-transform: uppercase;
-  font-weight: 500; }
+  font-weight: 500;
+}
 
 h6 {
-  font-size: 15px;
+  font-size: .75em;
   color: #3D4351;
   font-weight: 500;
-  line-height: 24px; }
+  line-height: 24px;
+}
 
 .btn {
-  font-size: 13px;
+  font-size: 1em;
   border: solid 2px;
   border-radius: 40px;
   display: inline-block;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+}
 
 .btn:hover, .btn:focus {
   color: #fff;
-  border-color: #FF5274;
-  background-color: #FF5274; }
+  border-color: rgba(71, 228, 194, 1);
+  background-color: rgba(71, 228, 194, 1);
+}
 
 .btn-white {
-  font-size: 13px;
+  font-size: 1em;
   border: solid 2px;
   border-radius: 40px;
   display: inline-block;
-  border-color: #fff; }
+  border-color: #fff;
+}
 
 .btn-white:hover, .btn-white:focus {
-  color: #FF5274;
-  border-color: #FF5274; }
+  color: rgba(71, 228, 194, 1);
+  border-color: rgba(71, 228, 194, 1);
+}
 
 .btn-fill {
   color: #fff;
-  border: solid 2px #FF5274;
+  border: solid 2px rgba(71, 228, 194, 1);
   border-radius: 40px;
   display: inline-block;
   text-transform: uppercase;
-  background-color: #FF5274; }
+  background-color: rgba(71, 228, 194, 1);
+}
 
 .btn-fill:hover, .btn-fill:focus {
   color: #fff;
-  background-color: #D7405D;
-  border-color: #D7405D; }
+  background-color: rgba(52, 173, 146, 1);
+  border-color: rgba(52, 173, 146, 1);
+}
 
 .btn-small {
-  padding: 8px 40px; }
+  padding: 8px 40px;
+}
 
 .btn-large {
-  padding: 15px 40px; }
+  padding: 15px 40px;
+}
 
 .btn-margin-right {
-  margin-right: 20px; }
+  margin-right: 20px;
+}
 
 section.intro, section.features-extra, section.sign-up {
-  background: #fff; }
+  background: #fff;
+}
 
 section.features, section.blog-intro, section.blog {
-  background: #F3F4F8; }
+  background: #F3F4F8;
+}
 
 /* ==========================================================================
 Global Styles
@@ -194,74 +259,89 @@ Global Styles
 .group:after {
   content: "";
   display: table;
-  clear: both; }
+  clear: both;
+}
 
 .no-padding {
-  padding: 0; }
+  padding: 0;
+}
 
 .no-margin {
-  margin: 0; }
+  margin: 0;
+}
 
 a {
-  color: #FF5274;
+  color: rgba(71, 228, 194, 1);
   -webkit-transition-timing-function: ease;
   transition-timing-function: ease;
   -webkit-transition-duration: 200ms;
   transition-duration: 200ms;
   -webkit-transition-property: color, border-color, background-color;
-  transition-property: color, border-color, background-color; }
+  transition-property: color, border-color, background-color;
+}
 
 a:hover, a:focus {
-  color: #D7405D;
-  text-decoration: none; }
+  color: rgba(52, 173, 146, 1);
+  text-decoration: none;
+}
 
 body {
   font-family: "Open Sans", sans-serif;
   font-weight: 300;
   color: rgba(28, 54, 83, 0.6);
-  -webkit-text-size-adjust: 100%; }
+  -webkit-text-size-adjust: 100%;
+}
 
 ul, ol {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 ul li {
-  list-style: none; }
+  list-style: none;
+}
 
 .section-padding {
-  padding: 120px 0; }
+  padding: 120px 0;
+}
 
 .tooltip {
   position: absolute;
   z-index: 1070;
   display: block;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 12px;
+  font-family: "Open Sans", sans-serif;
+  font-size: .5em;
   font-weight: normal;
   line-height: 1.4;
   visibility: visible;
   filter: alpha(opacity=0);
-  opacity: 0; }
+  opacity: 0;
+}
 
 .tooltip.in {
   filter: alpha(opacity=90);
-  opacity: .9; }
+  opacity: .9;
+}
 
 .tooltip.top {
   padding: 5px 0;
-  margin-top: -3px; }
+  margin-top: -3px;
+}
 
 .tooltip.right {
   padding: 0 5px;
-  margin-left: 3px; }
+  margin-left: 3px;
+}
 
 .tooltip.bottom {
   padding: 5px 0;
-  margin-top: 3px; }
+  margin-top: 3px;
+}
 
 .tooltip.left {
   padding: 0 5px;
-  margin-left: -3px; }
+  margin-left: -3px;
+}
 
 .tooltip-inner {
   max-width: 200px;
@@ -271,11 +351,13 @@ ul li {
   text-decoration: none;
   text-transform: capitalize;
   background-color: #000;
-  border-radius: 4px; }
+  border-radius: 4px;
+}
 
 /* ==========================================================================
 Animations
 ========================================================================== */
+
 .pulse2 {
   -webkit-animation-name: pulse2;
           animation-name: pulse2;
@@ -284,7 +366,8 @@ Animations
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
   -webkit-animation-timing-function: linear;
-          animation-timing-function: linear; }
+          animation-timing-function: linear;
+        }
 
 @-webkit-keyframes pulse2 {
   0% {
@@ -307,6 +390,7 @@ Animations
   100% {
     -webkit-transform: scale(1);
             transform: scale(1); } }
+
 .floating-arrow {
   -webkit-animation-name: floating-arrow;
           animation-name: floating-arrow;
@@ -338,6 +422,7 @@ Animations
   to {
     -webkit-transform: translate(-50%, 0);
             transform: translate(-50%, 0); } }
+
 .floating-logo {
   -webkit-animation-name: floating-logo;
           animation-name: floating-logo;
@@ -369,27 +454,34 @@ Animations
   to {
     -webkit-transform: translate(-50%, 0);
             transform: translate(-50%, 0); } }
+
 /* ==========================================================================
 Waypoinsts
 ========================================================================== */
+
 .wp1, .wp2, .wp3, .wp4, .wp5, .wp6, .wp7, .wp8, .wp9 {
-  visibility: hidden; }
+  visibility: hidden;
+}
 
 .wp2 {
   -webkit-animation-delay: 0.3s;
-  animation-delay: 0.3s; }
+  animation-delay: 0.3s;
+}
 
-.bounceInLeft, .bounceInRight, .fadeInUp, .fadeInUpDelay, .fadeInDown, .fadeInUpD, .fadeInLeft, .fadeInRight, .bounceInDown {
-  visibility: visible; }
+.bounceInLeft, .bounceInRight, .fadeIn, .fadeInUp, .fadeInUpDelay, .fadeInDown, .fadeInUpD, .fadeInLeft, .fadeInRight, .bounceInDown {
+  visibility: visible;
+}
 
 /* ==========================================================================
 Navigation
 ========================================================================== */
+
 .header-nav.open {
   visibility: visible;
   opacity: 0.9;
   -webkit-transition: opacity 0.5s;
-  transition: opacity 0.5s; }
+  transition: opacity 0.5s;
+}
 
 .nav-toggle {
   position: absolute;
@@ -397,10 +489,12 @@ Navigation
   right: 15px;
   z-index: 999999;
   padding: 10px 35px 16px 0;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .nav-toggle:focus {
-  outline: none; }
+  outline: none;
+}
 
 .nav-toggle span, .nav-toggle span:before, .nav-toggle span:after {
   content: "";
@@ -410,34 +504,42 @@ Navigation
   height: 3px;
   border-radius: 1px;
   background: #fff;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .nav-toggle span:before {
-  top: -10px; }
+  top: -10px;
+}
 
 .nav-toggle span:after {
-  bottom: -10px; }
+  bottom: -10px;
+}
 
 .nav-toggle span, .nav-toggle span:before, .nav-toggle span:after {
   -webkit-transition: all 300ms ease-in-out;
-  transition: all 300ms ease-in-out; }
+  transition: all 300ms ease-in-out;
+}
 
 .nav-toggle.active span {
-  background-color: transparent; }
+  background-color: transparent;
+}
 
 .nav-toggle.active span:before, .nav-toggle.active span:after {
-  top: 0; }
+  top: 0;
+}
 
 .nav-toggle.active span:before {
   -ms-transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
-  transform: rotate(45deg); }
+  transform: rotate(45deg);
+}
 
 .nav-toggle.active span:after {
   top: 10px;
   -ms-transform: translatey(-10px) rotate(-45deg);
   -webkit-transform: translatey(-10px) rotate(-45deg);
-  transform: translatey(-10px) rotate(-45deg); }
+  transform: translatey(-10px) rotate(-45deg);
+}
 
 .navicon {
   position: absolute;
@@ -446,11 +548,13 @@ Navigation
   top: 48px;
   visibility: hidden;
   -webkit-transition: all 300ms ease-in-out;
-          transition: all 300ms ease-in-out; }
+          transition: all 300ms ease-in-out;
+}
 
 /* ==========================================================================
 Hero
 ========================================================================== */
+
 .hero {
   min-height: 750px;
   background: url("../img/hero.jpg") center center;
@@ -463,7 +567,7 @@ Hero
     margin-bottom: 40px; }
   .hero p.intro {
     color: #fff;
-    font-size: 20px;
+    font-size: 28px;
     font-weight: 300;
     margin-bottom: 80px; }
   .hero .hero-content {
@@ -493,7 +597,7 @@ header {
   header a {
     color: #fff;
     text-transform: uppercase;
-    font-size: 13px; }
+    font-size: 12px; }
     header a.login {
       margin-right: 20px; }
   header .logo {
@@ -507,7 +611,7 @@ header {
         color: #fff;
         padding-right: 25px; }
         header ul.primary-nav li a:hover {
-          color: #FF5274; }
+          color: rgba(71, 228, 194, 1); }
       header ul.primary-nav li:last-child a {
         padding-right: 0px; }
   header ul.member-actions li {
@@ -515,7 +619,7 @@ header {
     header ul.member-actions li a {
       color: #fff; }
       header ul.member-actions li a:hover {
-        color: #FF5274; }
+        color: rgba(71, 228, 194, 1); }
   header .header-nav {
     display: inline-block; }
   header .member-actions {
@@ -538,25 +642,30 @@ header {
 /* ==========================================================================
 Intro
 ========================================================================== */
+
 .intro span.icon {
   font-size: 40px;
-  color: #FF5274;
-  font-weight: bold; }
+  color: rgba(71, 228, 194, 1);
+  font-weight: bold;
+}
 
 .intro-icon {
   display: inline-block;
   vertical-align: top;
   padding: 6px 0 0 0;
   margin-right: 20px;
-  width: 40px; }
+  width: 40px;
+}
 
 .intro-content {
   display: inline-block;
-  width: 80%; }
+  width: 80%;
+}
 
 /* ==========================================================================
 Features-stack
 ========================================================================== */
+
 .features {
   position: relative; }
   .features p {
@@ -566,7 +675,7 @@ Features-stack
     margin: 0 0 20px 0; }
   .features span.icon {
     font-size: 35px;
-    color: #FF5274;
+    color: rgba(71, 228, 194, 1);
     font-weight: bold; }
   .features .feature-icon {
     display: inline-block;
@@ -783,7 +892,7 @@ Sign up form
   text-align: left;
   position: relative; }
   .sign-up .signup-form .form-input-group i {
-    color: #FF5274;
+    color: rgba(71, 228, 194, 1);
     font-size: 14px; }
   .sign-up .signup-form .form-input-group i:after {
     content: "";
@@ -861,11 +970,11 @@ footer {
   position: relative; }
   footer p {
     color: #ACB1B4;
-    font-size: 13px; }
+    font-size: 12px; }
   footer a {
     color: #fff; }
   footer a:hover {
-    color: #FF5274; }
+    color: rgba(71, 228, 194, 1); }
   footer ul.footer-group {
     border-top: solid 1px #4E566C;
     padding-top: 25px;
@@ -873,10 +982,10 @@ footer {
   footer ul.footer-group li {
     display: inline-block; }
   footer ul.footer-group li a {
-    font-size: 13px;
+    font-size: 10px;
     text-transform: uppercase; }
   footer ul.footer-group li a:hover {
-    color: #FF5274; }
+    color: rgba(71, 228, 194, 1); }
   footer ul.footer-group li {
     margin-right: 30px; }
   footer ul.footer-group li:last-child {
@@ -891,7 +1000,7 @@ footer {
     right: 0;
     width: 20%;
     height: 100%;
-    padding: 142px 0 0 70px; }
+    padding: 142px 0 0 70px; }rgba(71, 228, 194, 1)
     footer .social-share p {
       color: #fff;
       text-transform: uppercase;
