--- a/gtrainlovestory/sass/partials/_colors.scss
+++ b/gtrainlovestory/sass/partials/_colors.scss
@@ -11,9 +11,9 @@ $txt-accent: #ACB1B4;
 $form-placeholder: #BCC1C3;
 // form placeholder text
 // Global colours
-$accent-color: #FF5274;
+$accent-color: rgba(71, 228, 194, 1);
 // global accent colour
-$accent-color-hover: #D7405D;
+$accent-color-hover: rgba(52, 173, 146, 1);
 // global accent colour hover
 $white-color: #fff;
 $black-color: #000;
