--- a/gtrainlovestory/css/queries.css
+++ b/gtrainlovestory/css/queries.css
@@ -67,7 +67,7 @@
 
 	nav ul li a {
 		color: #fff;
-		font-size: 25px;
+		font-size: 1.25em;
 		text-transform: uppercase;
 		font-weight: 600;
 		-moz-transition: all 300ms ease-in-out;
@@ -241,7 +241,7 @@
 		}
 
 		footer ul.footer-group li a {
-			font-size: 13px;
+			font-size: 1em;
 			text-transform: uppercase;
 			padding: 20px 0;
 			display: block;
