--- a/gtrainlovestory/css/styles.css
+++ b/gtrainlovestory/css/styles.css
@@ -7,6 +7,10 @@
 Added
 ========================================================================== */
 
+.attire {
+  padding-bottom: 20px;
+}
+
 .brighten {
    color: #E7808D;
 }
@@ -309,7 +313,7 @@ ul li {
 }
 
 .section-padding {
-  padding: 60px 0 0 0;
+  padding: 60px 0 60px 0;
 }
 
 .tooltip {
@@ -537,7 +541,7 @@ header {
   color: #fff;
   font-size: 30px;
   position: absolute;
-  bottom: 30px;
+  bottom: 20%;
   left: 50%;
   -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
@@ -591,61 +595,62 @@ Intro
 ========================================================================== */
 
 .blog {
-  padding-bottom: 120px; }
+  padding-bottom: 0;
+}
+
   .blog img {
     width: 100%;
     height: auto;
     -webkit-transition: all 300ms ease-in-out;
-    transition: all 300ms ease-in-out; }
+    transition: all 300ms ease-in-out;
+  }
+
   .blog h2 {
     font-size: 1em;
     color: #ACB1B4;
     font-weight: 500;
     text-transform: uppercase;
     letter-spacing: 0.2em;
-    margin-top: 35px; }
+    margin-top: 35px;
+  }
+
   .blog .btn {
-    margin-top: 20px; }
+    margin-top: 20px;
+  }
+
   .blog .blog-img-wrap {
     position: relative;
-    overflow: hidden; }
-    .blog .blog-img-wrap .overlay {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(255, 255, 255, 0.5);
-      -webkit-transition: all 300ms ease-in-out;
-      transition: all 300ms ease-in-out;
-      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-      filter: alpha(opacity=0);
-      opacity: 0; }
-    .blog .blog-img-wrap i {
-      color: #fff;
-      font-size: 2em;
-      position: absolute;
-      width: 20px;
-      height: 20px;
-      top: 25px;
-      right: 35px; }
+    overflow: hidden;
+    width: 80%;
+    margin: 0 auto;
+  }
+
   .blog .blog-img-wrap:hover img, .blog .blog-img-wrap:focus img {
     -ms-transform: scale(1.1);
     -webkit-transform: scale(1.1);
     transform: scale(1.1); }
-  .blog .blog-img-wrap:hover .overlay, .blog .blog-img-wrap:focus .overlay {
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=1)";
-    filter: alpha(opacity=1);
-    opacity: 1;
-    z-index: 9; }
+
   .blog figcaption {
     margin-top: 10px;
   }
+
   .blog figcaption i {
     margin-left: 5px;
-    font-size: 1.5em; }
+    font-size: 1.5em;
+  }
+
+  .blog figcaption p {
+    margin-bottom: 0;
+    padding-bottom: 10px;
+  }
+
   .blog figcaption a.blog-post-title {
-    color: rgba(28, 54, 83, 0.6); }
+    color: rgba(28, 54, 83, 0.6);
+  }
+
   .blog figcaption a.blog-post-title:hover, .blog figcaption a.blog-post-title:focus {
-    color: #3D4351; }
+    color: #3D4351;
+  }
 
 /* ==========================================================================
 To top
