--- a/gtrainlovestory/css/styles.css
+++ b/gtrainlovestory/css/styles.css
@@ -719,7 +719,7 @@ footer {
     right: 0;
     width: 20%;
     height: 100%;
-    padding: 142px 0 0 70px; }rgba(71, 228, 194, 1)
+    padding: 50px 0 0 40px; }
     footer .social-share p {
       color: #fff;
       text-transform: uppercase;
@@ -753,7 +753,7 @@ footer {
     footer .social-share a i {
       margin-top: 10px; }
   footer .footer-links {
-    margin: 120px 0 120px 0; }
+    margin: 60px 0 30px 0; }
 
 /* ==========================================================================
 Icon font (http://www.elegantthemes.com/blog/freebie-of-the-week/free-line-style-icons)
