--- a/gtrainlovestory/css/styles.css
+++ b/gtrainlovestory/css/styles.css
@@ -7,6 +7,14 @@
 Added
 ========================================================================== */
 
+.reveal {
+  cursor: pointer;
+}
+
+.viddy {
+  width: 100%;
+}
+
 .attire {
   padding-bottom: 20px;
 }
