--- a/gtrainlovestory/css/styles.css
+++ b/gtrainlovestory/css/styles.css
@@ -7,6 +7,10 @@
 Added
 ========================================================================== */
 
+.bump {
+  padding-bottom: 5px;
+}
+
 .footy {
   padding: 20px 0;
 }
