--- a/gtrainlovestory/css/queries.css
+++ b/gtrainlovestory/css/queries.css
@@ -15,11 +15,40 @@
 
 }
 
+
+
 @media screen and (max-width:1024px) {
 }
 
+
+
 /* Responsive nav kicks in */
 @media screen and (max-width:991px) {
+
+	.dickinson, .eliot, .theater, .map {
+    width: 100%;
+  }
+
+  .blog .blog-img-wrap {
+  	width: 100%;
+  }
+
+  .peru {
+  	margin-top: 40px;
+  }
+
+  .text-right.poem-number {
+    text-align: left;
+  }
+
+  .conversation-topics {
+  	margin-left: 10px;
+  }
+
+  .accommodations {
+  	font-size: 3.5em;
+  }
+
 	header {
 		width: 90%;
 		padding-left: 25px;
@@ -31,7 +60,7 @@
 
 	.header-nav {
 		position: fixed;
-		background-color: #000;
+		background-color: #373D4A;
 		width: 100%;
 		height: 100%;
 		top: 0;
@@ -69,7 +98,6 @@
 		color: #fff;
 		font-size: 1.25em;
 		text-transform: uppercase;
-		font-weight: 600;
 		-moz-transition: all 300ms ease-in-out;
 		-o-transition: all 300ms ease-in-out;
 		-webkit-transition: all 300ms ease-in-out;
@@ -184,7 +212,7 @@
 
 	.intro-content {
 		display: inline-block;
-		width: 75%;
+		width: 100%;
 		margin-bottom: 30px;
 	}
 
@@ -235,6 +263,8 @@
 		margin: 120px 0 120px 0;
 	}
 
+
+
 	@media screen and (max-width:640px) {
 		footer ul.footer-group {
 			border-top: none;
@@ -258,7 +288,14 @@
 
 	}
 
+
+
 	@media screen and (max-width:480px) {
+		
+		.hero {
+			min-height: 0;
+		}
+
 		.hero .hero-content {
 			padding-top: 41%;
 		}
@@ -275,6 +312,37 @@
 
 		.hero h1 {
 			font-size: 30px;
+			margin-bottom: 80px;
+		}
+
+    .viddy {
+		  position: relative;
+		  padding-bottom: 56.25%; /* 16:9 */
+		  padding-top: 25px;
+		  height: 0;
+		}
+
+		.viddy iframe {
+		  position: absolute;
+		  top: 0;
+		  left: 0;
+		  width: 100%;
+		  height: 100%;
+		}
+
+		.morgan-okane-viddy {
+		  position: relative;
+		  padding-bottom: 56.25%; /* 16:9 */
+		  padding-top: 25px;
+		  height: 0;
+		}
+
+		.morgan-okane-viddy iframe {
+		  position: absolute;
+		  top: 0;
+		  left: 0;
+		  width: 100%;
+		  height: 100%;
 		}
 
 		.btn-margin-right {
@@ -317,6 +385,8 @@
 		}
 
 	}
+
+
 
 	@media screen and (max-width:320px) {
 	}
