--- a/gtrainlovestory/css/styles.css
+++ b/gtrainlovestory/css/styles.css
@@ -11,7 +11,7 @@ Added
 }
 
 .conversation-topics-header {
-    font-size: 28px;
+    font-size: 2.5em;
     margin-top: 0;
 }
 
@@ -58,7 +58,7 @@ li span {
 }
 
 .footer-group li a {
-  font-size: 10px;
+  font-size: 1em;
 }
 
 .light-box {
@@ -526,7 +526,7 @@ Hero
     margin-bottom: 200px; }
   .hero p.intro {
     color: #fff;
-    font-size: 28px;
+    font-size: 3em;
     font-weight: 300;
     margin-top: 80px;
   }
