--- a/gtrainlovestory/css/queries.css
+++ b/gtrainlovestory/css/queries.css
@@ -1,4 +1,5 @@
 @media screen and (max-width:1200px) {
+
 	header {
 		width: 90%;
 		margin: 0 auto;
@@ -37,7 +38,7 @@
   	margin-top: 40px;
   }
 
-  .text-right.poem-number {
+  .text-right .poem-number {
     text-align: left;
   }
 
@@ -271,6 +272,7 @@
 
 
 	@media screen and (max-width:640px) {
+
 		footer ul.footer-group {
 			border-top: none;
 		}
@@ -392,7 +394,9 @@
 	}
 
 	@media screen and (max-width:320px) {
+
 		p {
+			color: red;
 			font-size: .75em;
 		}
 
@@ -403,9 +407,8 @@
 		.brighten {
 			font-size: .75em;
 		}
-    
-    h2 {
-    	font-size: 3em;
-    }
 
+		h2 {
+			font-size: 3em;
+		}
 	}
