--- a/gtrainlovestory/css/queries.css
+++ b/gtrainlovestory/css/queries.css
@@ -397,7 +397,7 @@
 	@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
 
 		p {
-			font-size: .75em;
+			font-size: 1em;
 		}
 
 		.intro-content, .poem {
