--- a/gtrainlovestory/css/queries.css
+++ b/gtrainlovestory/css/queries.css
@@ -397,10 +397,22 @@
 	@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
 
 		p {
-			font-size: 20px;
+			font-size: 1em;
+		}
+
+		.blog-post p {
+			font-size: 1em;
+		}
+
+		.intro-content, .poem {
+			font-size: 1.5em;
+		}
+
+		.brighten {
+			font-size: .75em;
 		}
 
 		h2 {
-			font-size: 30px;
+			font-size: 3em;
 		}
 	}
