--- a/gtrainlovestory/css/styles.css
+++ b/gtrainlovestory/css/styles.css
@@ -292,7 +292,7 @@ body {
   font-weight: 300;
   color: rgba(28, 54, 83, 0.6);
   /*-webkit-text-size-adjust: 100%;*/
-  text-size-adjust: auto;
+  -webkit-text-size-adjust: auto;
 }
 
 ul, ol {
