--- a/gtrainlovestory/css/queries.css
+++ b/gtrainlovestory/css/queries.css
@@ -416,8 +416,12 @@
 
   @media screen and (max-device-width:320px) {
 
-	p {
-			font-size: 3em;
-		}
+	p, li {
+		font-size: 2em;
+	}
+
+	h6.ceremony-info" {
+    font-size: 2em;
+	}
 
 	}
