--- a/gtrainlovestory/css/queries.css
+++ b/gtrainlovestory/css/queries.css
@@ -92,7 +92,7 @@
 
 	header nav {
 		position: relative;
-		top: 45%;
+		top: 5%;
 		-moz-transform: translatey(-45%);
 		-ms-transform: translatey(-45%);
 		-o-transform: translatey(-45%);
@@ -420,7 +420,7 @@
 			font-size: 2em;
 		}
 
-		h6.ceremony-info" {
+		h6.ceremony-info {
 	    font-size: 2em;
 		}
 
